grammar.txt
<program> ::= { <top_level_declaration> } EOF

<top_level_declaration> ::= <function_definition> | <variable_declaration> ";"

<function_definition> ::= "f" ":" <function_header> <block>
<function_header> ::= <function_name> "(" [ <parameter_list> ] ")" "->" <type>
<function_name> ::= <id> | "main"
<parameter_list> ::= <parameter> { "," <parameter> }
<parameter> ::= <type> ":" <id>

<block> ::= "{" { <statement> } "}"
<statement> ::= <variable_declaration> ";"
              | <assignment> ";"
              | <return_statement> ";"
              | <function_call> ";"
              | <if_statement>
              | <while_statement>
              | <block> [ ";" ]

<variable_declaration> ::= <type> ":" <id> [ "=" <expression> ]
<assignment> ::= <id> "=" <expression>
<return_statement> ::= "return" [ <expression> ]
<function_call> ::= <id> "(" [ <argument_list> ] ")"
<argument_list> ::= <expression> { "," <expression> }

<if_statement> ::= "if" "(" <expression> ")" <block>
                   [ "else" ( <block> | <if_statement> ) ]
<while_statement> ::= "while" "(" <expression> ")" <block>

<expression> ::= <logical_or_expression>
<logical_or_expression> ::= <logical_and_expression> { "||" <logical_and_expression> }
<logical_and_expression> ::= <equality_expression> { "&&" <equality_expression> }
<equality_expression> ::= <relational_expression> { ( "==" | "!=" ) <relational_expression> }
<relational_expression> ::= <additive_expression> { ( "<" | "<=" | ">" | ">=" ) <additive_expression> }
<additive_expression> ::= <multiplicative_expression>
                          { ( "+" | "-" ) <multiplicative_expression> }
<multiplicative_expression> ::= <primary_expression>
                                { ( "*" | "/" ) <primary_expression> }
<primary_expression> ::= <id>
                       | <literal>
                       | <function_call>
                       | "!" <primary_expression>
                       | "(" <expression> ")"

<id> ::= <letter> { <letter> }*
<type> ::= "int" | "float" | "str" | "bool" | "void" | "char"
<literal> ::= <int_literal> | <float_literal> | <char_literal> | <string_literal> | "true" | "false"
